<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/CardView_leaderboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="0dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvLeaderboardRank"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:gravity="center"
                android:text="@string/position_4_placeholder"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivLeaderBoardProfilePic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/leaderboard_profile_picture"
                android:scaleType="centerCrop"
                android:src="@drawable/profile_picture" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvLeaderboardName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="6"
                android:gravity="start"
                android:text="@string/name_placeholder"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvLeaderboardScore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.5"
                android:gravity="center"
                android:text="@string/points_placeholder"
                android:textColor="@color/colour_primary"
                android:textSize="22sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>