<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_tertiary">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_primary"
        android:elevation="4dp"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@android:color/white">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </com.google.android.material.appbar.MaterialToolbar>

    <View
        android:id="@+id/oval_view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/upside_down_convex_shape"
        android:backgroundTint="@color/background_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <RadioGroup
        android:id="@+id/notification_time_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar">


        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/time_8am"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:layout_weight="1"
            android:background="@null"
            android:button="@null"
            android:drawableStart="@drawable/preferences_radio_button_bg"
            android:drawablePadding="12dp"
            android:fontFamily="sans-serif-black"
            android:paddingEnd="20dp"
            android:text="@string/_08_00_am"
            android:textColor="@color/secondary_text"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/time_10am"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:button="@null"
            android:drawableStart="@drawable/preferences_radio_button_bg"
            android:drawablePadding="12dp"
            android:fontFamily="sans-serif-black"
            android:paddingEnd="20dp"
            android:text="@string/_10_00_am"
            android:textColor="@color/secondary_text"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/time_12pm"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:button="@null"
            android:drawableStart="@drawable/preferences_radio_button_bg"
            android:drawablePadding="12dp"
            android:fontFamily="sans-serif-black"
            android:paddingEnd="20dp"
            android:text="@string/_12_00_pm"
            android:textColor="@color/secondary_text"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/time_2pm"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:button="@null"
            android:drawableStart="@drawable/preferences_radio_button_bg"
            android:drawablePadding="12dp"
            android:fontFamily="sans-serif-black"
            android:paddingEnd="20dp"
            android:text="@string/_14_00_pm"
            android:textColor="@color/secondary_text"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/time_4pm"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:button="@null"
            android:drawableStart="@drawable/preferences_radio_button_bg"
            android:drawablePadding="12dp"
            android:fontFamily="sans-serif-black"
            android:paddingEnd="20dp"
            android:text="@string/_16_00_pm"
            android:textColor="@color/secondary_text"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/time_6pm"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:button="@null"
            android:drawableStart="@drawable/preferences_radio_button_bg"
            android:drawablePadding="12dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/_18_00_pm"
            android:textColor="@color/secondary_text"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/time_8pm"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:button="@null"
            android:drawableStart="@drawable/preferences_radio_button_bg"
            android:drawablePadding="12dp"
            android:fontFamily="sans-serif-black"
            android:paddingEnd="20dp"
            android:text="@string/_20_00_pm"
            android:textColor="@color/secondary_text"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/when_available"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:button="@null"
            android:drawableStart="@drawable/preferences_radio_button_bg"
            android:drawablePadding="12dp"
            android:fontFamily="sans-serif-black"
            android:paddingEnd="20dp"
            android:text="@string/whenever_available"
            android:textColor="@color/secondary_text"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />
    </RadioGroup>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_notification_time"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/colour_primary"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>