<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/leaderboard_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/leaderboard_TextView"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/RadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/radio_group_bg"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/leaderboard_TextView">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbAllTime"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/radio_button_bg"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/all_time_Text"
            android:textColor="@drawable/radio_group_text_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbWeekly"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/radio_button_bg"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/this_week_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbMonthly"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/radio_button_bg"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/this_month_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RadioGroup>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/supportView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/RadioGroup" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/leaderBoard_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:elevation="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/supportView"
        tools:listitem="@layout/leader_board_item" />

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="950dp"
        android:layout_height="600dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/convex_shape"
        android:backgroundTint="@color/background_tertiary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/RadioGroup"
        tools:ignore="VisualLintBounds" />

</androidx.constraintlayout.widget.ConstraintLayout>