<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fifth_background"
    tools:context=".activities.RandomFactActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_primary"
        android:elevation="4dp"
        android:textAlignment="center"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@android:color/white" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/fact_number_CardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardBackgroundColor="@color/colour_primary"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:strokeWidth="0dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/fact_number"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:fontFamily="@font/lalezar"
            android:text="@string/fact_zap_placeholder"
            android:textColor="@color/white"
            android:textSize="40sp" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/lightning_bolt"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:src="@drawable/bolt5"
        android:contentDescription="@string/lightning_bolt"
        app:layout_constraintBottom_toTopOf="@id/random_fact_CardView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fact_number_CardView" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/random_fact_CardView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/background_primary"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@id/save_fact"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lightning_bolt"
        app:strokeWidth="0dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/random_fact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_fact"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/colour_primary"
        android:text="@string/save_fact_to_profile"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/random_fact_CardView" />

</androidx.constraintlayout.widget.ConstraintLayout>